# mosh

./: .gitignore  CMakeLists.txt  README.md  term  tmp
.cache/clangd/index/: glad.c.903001EA9C4E1B84.idx  glad.h.1F10E8D23BC1B82C.idx  gui.cpp.3D1722E4655D88E1.idx  khrplatform.h.A5BC3D1CE0BF6942.idx
include/glad/: glad.h
pmpp/: grayscale.c  matmul.cu  test  tiledMatmul.cu  vecAdd.c  vecAdd.cu
src/: commands.cpp  commands.hpp  config.yml  configReader.cpp  configReader.hpp  cursor.cpp  cursor.hpp  glad.c  gui.cpp  gui.hpp  shader.cpp  shader.hpp  text.cpp  text.hpp
src/shaders/: shader.fs  shader.vs  textShaderFragment.glsl  textShaderVertex.glsl
